--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     # Configuration
     "pyyaml>=6.0",
     "pydantic>=2.0.0",
+    "pandera>=0.20.0",
     
     # Visualization
     "matplotlib>=3.7.0",
