--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ dependencies = [
     "pydantic>=2.0.0",
     "pandera>=0.20.0",
     
+    # Tabular modeling
+    "scikit-learn>=1.5.0",
+    
     # Visualization
     "matplotlib>=3.7.0",
     "seaborn>=0.12.0",
